made the whole site Responsive

--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
@@ -1,6 +1,7 @@
 <div class="background"></div>
 <header>
   <!-- <h1>Online Product Evaluator</h1> -->
+  <h2 class="welcome">Welcome to Online Product Evaluator!</h2>
   <div class="instruction-card">
     <div class="instruction-title">Instructions:</div>
     <ul class="instruction-list">
@@ -12,7 +13,6 @@
   </div>
 </header>
 <main>
-  <h2>Welcome to Online Product Evaluator!</h2>
   <div class="container product">
     <img id="image" [src]="images[currentImageIndex]" alt="Product">
     <form>
