--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
@@ -2,8 +2,8 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         background-image: url('../addprod/img/bg.jpg');
         background-repeat: no-repeat;
         background-size: cover;
@@ -18,6 +18,26 @@
         color: #333;
       }
 
+      .welcome {
+        top: 95px;
+        left: 15px;
+      }
+
+      @media screen and (max-width: 767px) {
+        header, .welcome, .instruction-card {
+          display: none;
+        }
+
+        main {
+          height: 80%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 0 20px;
+          border-radius: 5px;
+        }
+      }
+
       .instruction {
         position: absolute;
         top: 10px;
@@ -28,14 +48,14 @@
 
       .instruction-card {
         max-width: 300px;
-        margin: 20px auto;
         padding: 20px;
         border: 1px solid #ccc;
         border-radius: 5px;
         font-size: 11px;
+
         position: absolute;
-        top: 60px;
-        right: 20px;
+        right: 15px;
+        top: 95px;
       }
       
       .instruction-title {
@@ -72,11 +92,7 @@
       h2 {
         font-size: 24px;
         color: #444;
-        margin-top: 20px;
         position: absolute;
-        top: 60px;
-        left: 20px;
-
       }
       
       p {
@@ -97,35 +113,21 @@
       label[for="review1"] {
         font-weight: bold;
         display: block;
-        margin-top:100px; 
       }
 
       header {  
         color: #333;
-        display: flex;
-        justify-content: left; 
-        padding: 10px;
-        width: 100%;
-      }
-      
-      header .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 0 30px; 
+        height: 25vh;
       }
 
       .container {
-        max-width: 800px;
-        margin: 0 auto;
+        margin: 0;
       }
 
 
       main {
-      max-width: 800px;
-      margin: 50px auto;
-      padding: 40px;
-      border-radius: 5px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0);
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0);
       }
 
       .product-grid {
@@ -138,22 +140,24 @@
 
       .product {
         background-color: #eeeeee00;
-        padding: 80px;
         border-radius: 5px;
         text-align: center;
-        max-width: 300px;
         position: relative;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 40px;
       }
 
       .product img {
-        width: 400%;
+        width: 100%;
         max-width: 500px;
         max-height: 500px;
         object-fit: contain;
         border-radius: 5px;
         display: block;
         margin: -10px auto 20px;
-        transform: translateX(-18%);
         transition: opacity 0.3s ease-in-out;
       }
 
@@ -174,26 +178,23 @@
       }
       
       form {
+        width: 100%;
         max-width: 1000px; 
-        margin: 0 auto;
       }
       
       label {
         font-weight: bold;
         display: block;
-        margin-bottom: 10px;
       }
       
       textarea {
-        width: 380%;
-        height: 100%;
+        width: 100%;
         padding: 1px;
         font-size: 16px;
         border-radius: 5px;
         border: 1px solid #ccc;
         /* margin-bottom: 10px; */
         resize:none;
-        transform: translateX(-35%);
       }
 
       
@@ -212,9 +213,9 @@
       
       .icon {
         position: absolute;
-        top: 105%;
-        right: -143%;
-        transform: translateY(-200%);
+        top: 12px;
+        right: 10px;
+
         cursor: pointer;
         color: #999;
         font-size: 20px;
