--- a/OPE-app2.0/frontend/src/app/components/contact/contact.component.html
+++ b/OPE-app2.0/frontend/src/app/components/contact/contact.component.html
@@ -6,15 +6,15 @@
       <form id="contact-form" class="contact-form">
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text" id="name" name="name" placeholder="Name" required>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" placeholder="Email" required>
         </div>
         <div class="form-group">
           <label for="subject">Subject</label>
-          <input type="text" id="subject" name="subject" required>
+          <input type="text" id="subject" name="subject" placeholder="Subject" required>
         </div>
         <div class="form-group">
           <label for="message">Message</label>
